[tool.poetry]
name = "pyutils"
version = "1.1.0"
description = ""
authors = ["Michael Bentz <mbentz@ufl.edu>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "py_utils" }]

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^2.0.20"

[tool.poetry.urls]
"Homepage" = "https://github.com/ctsit/PyUtils"
"Bug Tracker" = "https://github.com/ctsit/PyUtils/issues"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
